--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -18,6 +18,6 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Button layoutX="60.0" layoutY="160.0" mnemonicParsing="false" text="Assignment List" />
+      <Button layoutX="60.0" layoutY="160.0" mnemonicParsing="false" onAction="#onAssignmentClicked" text="Assignment List" />
    </children>
 </AnchorPane>
