--- a/src/assignmentlist/assignmentlist.fxml
+++ b/src/assignmentlist/assignmentlist.fxml
@@ -12,12 +12,14 @@
         <items>
           <Button mnemonicParsing="false" onAction="#handleButton" text="Add" />
           <Button mnemonicParsing="false" onAction="#removeList" text="Delete" />
+            <Button mnemonicParsing="false" onAction="#getHome" text="Back" />
         </items>
       </ToolBar>
       <AnchorPane prefWidth="1200.0" style="-fx-background-color: white;">
          <children>
-            <ListView fx:id="assignmentList" prefHeight="200.0" prefWidth="1200.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0" />
+            <ListView fx:id="assignmentList" layoutY="27.0" prefHeight="200.0" prefWidth="1200.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="27.0" />
             <Button contentDisplay="GRAPHIC_ONLY" layoutX="-1.0" layoutY="1.0" mnemonicParsing="false" onAction="#handleButton" opacity="0.0" prefHeight="26.0" prefWidth="1200.0" textFill="#f5d797" />
+            <Button layoutY="1.0" mnemonicParsing="false" onAction="#getSort" prefHeight="26.0" prefWidth="1200.0" text="Sort" />
          </children>
       </AnchorPane>
    </children>
