--- a/src/assignmentlist/assignmentlist.fxml
+++ b/src/assignmentlist/assignmentlist.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignmentlist.assignmentController">
+<VBox prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../CSS/Main.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignmentlist.assignmentController">
    <children>
       <ToolBar accessibleRole="BUTTON" prefHeight="40.0" prefWidth="1003.0" style="-fx-background-color: white;">
         <items>
