--- a/src/login/login.fxml
+++ b/src/login/login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -24,7 +25,7 @@
          </font>
       </Label>
       <TextField fx:id="username" layoutX="241.0" layoutY="126.0" />
-      <TextField fx:id="password" layoutX="241.0" layoutY="220.0" />
       <Button layoutX="273.0" layoutY="331.0" mnemonicParsing="false" onAction="#onLogin" text="Login" />
+      <PasswordField fx:id="password" layoutX="242.0" layoutY="220.0" />
    </children>
 </AnchorPane>
