--- a/src/main/resources/app/sample/sample.fxml
+++ b/src/main/resources/app/sample/sample.fxml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDrawer?>
+<?import com.jfoenix.controls.JFXHamburger?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="assignment" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../CSS/Main.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.app.sample.Controller">
+<AnchorPane fx:id="assignment" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" styleClass="home-back" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.app.sample.Controller">
    <children>
-      <Label fx:id="dashText" layoutX="213.0" layoutY="20.0" text="Dashboard">
+      <Label fx:id="dashText" layoutX="501.0" layoutY="40.0" text="Dashboard">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Button fx:id="rewardButton" layoutX="480.0" layoutY="347.0" mnemonicParsing="false" onAction="#onRewardClicked" text="My Galaxy" />
-      <Label fx:id="quote" layoutX="267.0" layoutY="73.0" text="Quote">
+      <Button fx:id="rewardButton" layoutX="480.0" layoutY="347.0" mnemonicParsing="false" onAction="#onRewardClicked" styleClass="home-button" stylesheets="@../style.css" text="My Galaxy" textFill="WHITE" />
+      <Label fx:id="quote" layoutX="544.0" layoutY="101.0" text="Quote">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Button layoutX="60.0" layoutY="160.0" mnemonicParsing="false" onAction="#onAssignmentClicked" text="Assignment List" />
-      <Text layoutX="449.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Score:" />
-      <Label fx:id="getScore" layoutX="524.0" layoutY="34.0" text="0" />
+      <Button layoutX="220.0" layoutY="269.0" mnemonicParsing="false" onAction="#onAssignmentClicked" styleClass="home-button" stylesheets="@../style.css" text="Assignment List" textFill="WHITE" />
+      <Text layoutX="726.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Score:" />
+      <Label fx:id="getScore" layoutX="801.0" layoutY="62.0" text="0" />
+      <JFXHamburger fx:id="homeBurger" layoutX="950.0" layoutY="30.0" prefHeight="44.0" prefWidth="46.0" />
+      <JFXDrawer fx:id="navDrawer" defaultDrawerSize="266.0" overLayVisible="false" prefHeight="768.0" prefWidth="265.0" resizableOnDrag="true" resizeContent="true" />
    </children>
 </AnchorPane>
