--- a/src/main/resources/app/sample/sample.fxml
+++ b/src/main/resources/app/sample/sample.fxml
@@ -2,29 +2,62 @@
 
 <?import com.jfoenix.controls.JFXDrawer?>
 <?import com.jfoenix.controls.JFXHamburger?>
+<?import com.jfoenix.controls.JFXMasonryPane?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="assignment" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" styleClass="home-back" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.app.sample.Controller">
-   <children>
-      <Label fx:id="dashText" layoutX="501.0" layoutY="40.0" text="Dashboard">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-      <Button fx:id="rewardButton" layoutX="480.0" layoutY="347.0" mnemonicParsing="false" onAction="#onRewardClicked" styleClass="home-button" stylesheets="@../style.css" text="My Galaxy" textFill="WHITE" />
-      <Label fx:id="quote" layoutX="544.0" layoutY="101.0" text="Quote">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Button layoutX="220.0" layoutY="269.0" mnemonicParsing="false" onAction="#onAssignmentClicked" styleClass="home-button" stylesheets="@../style.css" text="Assignment List" textFill="WHITE" />
-      <Text layoutX="726.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Score:" />
-      <Label fx:id="getScore" layoutX="801.0" layoutY="62.0" text="0" />
-      <JFXHamburger fx:id="homeBurger" layoutX="950.0" layoutY="30.0" prefHeight="44.0" prefWidth="46.0" />
-      <JFXDrawer fx:id="navDrawer" defaultDrawerSize="266.0" overLayVisible="false" prefHeight="768.0" prefWidth="265.0" resizableOnDrag="true" resizeContent="true" />
-   </children>
-</AnchorPane>
+<BorderPane prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.app.sample.Controller">
+   <bottom>
+      <AnchorPane prefHeight="78.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text layoutX="629.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Score:" />
+            <Label fx:id="getScore" layoutX="704.0" layoutY="130.0" text="0" />
+         </children>
+      </AnchorPane>
+   </bottom>
+   <top>
+      <AnchorPane fx:id="topBar" prefHeight="52.0" prefWidth="1024.0" style="-fx-background-color: #3F51B5;" BorderPane.alignment="CENTER">
+         <children>
+            <JFXHamburger fx:id="homeBurger" layoutX="14.0" layoutY="12.0" prefHeight="29.0" prefWidth="33.0" stylesheets="@../style.css" />
+            <Label fx:id="dashText" layoutX="414.0" layoutY="4.0" text="Dashboard" textFill="WHITE">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </top>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <JFXMasonryPane fx:id="Masonry" minHeight="75.0" minWidth="555.0" prefHeight="572.0" prefWidth="1024.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#onAssignmentClicked" styleClass="home-button" stylesheets="@../style.css" text="Assignment List" textFill="WHITE" />
+                  <Label fx:id="test" text="Label">
+                     <contextMenu>
+                        <ContextMenu>
+                          <items>
+                            <MenuItem mnemonicParsing="false" onAction="#onDelete" text="Delete" />
+                          </items>
+                        </ContextMenu>
+                     </contextMenu>
+                  </Label>
+                  <Button fx:id="rewardButton" mnemonicParsing="false" onAction="#onRewardClicked" styleClass="home-button" stylesheets="@../style.css" text="My Galaxy" textFill="WHITE" />
+                  <Label fx:id="quote" text="Quote">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </JFXMasonryPane>
+            <JFXDrawer fx:id="navDrawer" defaultDrawerSize="265.0" focusTraversable="true" mouseTransparent="true" nodeOrientation="LEFT_TO_RIGHT" overLayVisible="false" prefHeight="570.0" prefWidth="265.0" resizableOnDrag="true" />
+         </children>
+      </AnchorPane>
+   </center>
+</BorderPane>
