Resizing the drawer works

--- a/src/main/resources/app/sample/DrawerContent.fxml
+++ b/src/main/resources/app/sample/DrawerContent.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="768.0" prefWidth="265.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<AnchorPane prefHeight="768.0" prefWidth="265.0" style="-fx-background-color: #cc0000;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Accordion layoutY="222.0" prefHeight="546.0" prefWidth="265.0">
         <panes>
